# financekit-mcp

./: PRICING.md  README.md  SECURITY.md  fastmcp.json  mcpize.yaml  pyproject.toml  requirements.txt  server.json  smithery.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml
.mcpize/: project.json
docs/: X402_DEPLOYMENT.md  index.html
src/financekit/: __init__.py  __main__.py  server.py  server_x402.py
src/financekit/providers/: coingecko.py  yahoo.py
src/financekit/tools/: compare.py  crypto.py  market.py  premium.py  stocks.py  technical.py
src/financekit/utils/: cache.py
